--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URL=mongodb+srv://akshaysreesky:A6nIw3TfA7ZCjUuA@cluster0.tcsiy.mongodb.net/DevTinder?retryWrites=true&w=majority&appName=Cluster0
+JWT_KEY=5d87e279087cf3a4f4d51c8ee349661b
